[gd_scene load_steps=12 format=3 uid="uid://bdpjjmd0vuiy1"]

[ext_resource type="Script" uid="uid://cecmxf2qukiji" path="res://scenes/clock_playground_scene.gd" id="1_n7vmu"]
[ext_resource type="Theme" uid="uid://bdlvgyq3apvwb" path="res://resources/game_theme.tres" id="2_64u0i"]
[ext_resource type="PackedScene" uid="uid://dpxld06johs05" path="res://resources/components/clock.tscn" id="2_lgkt2"]
[ext_resource type="PackedScene" uid="uid://b2vgvwso01wcj" path="res://resources/ui/chalkboard_background.tscn" id="2_qiuj0"]
[ext_resource type="Script" uid="uid://bt8oofm2jelki" path="res://resources/resources/clock_time_resource.gd" id="3_iqbgd"]
[ext_resource type="PackedScene" uid="uid://c0d1gmgn30uwf" path="res://resources/components/digital_clock_input.tscn" id="3_wj7y3"]
[ext_resource type="PackedScene" uid="uid://ctvrf3rxaiyc1" path="res://resources/ui/back_button.tscn" id="33_akimw"]

[sub_resource type="Resource" id="Resource_pfogv"]
script = ExtResource("3_iqbgd")
hour = 8
minute = 0

[sub_resource type="Resource" id="Resource_pfead"]
script = ExtResource("3_iqbgd")
hour = 5
minute = 36

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b2ub0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ek2t"]

[node name="ClockPlaygroundScene" type="Control" node_paths=PackedStringArray("clock", "digital_clock_input", "sync_btn")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_n7vmu")
start_time = SubResource("Resource_pfogv")
clock = NodePath("MarginContainer/VBoxContainer/HBoxContainer/Control/Clock")
digital_clock_input = NodePath("MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control/DigitalClockInput")
sync_btn = NodePath("MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SyncTimeButton")
metadata/_edit_lock_ = true

[node name="Background" parent="." instance=ExtResource("2_qiuj0")]
layout_mode = 1
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 72
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 72
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_64u0i")
theme_type_variation = &"SceneTitleLabel"
text = "ClockPlaygroundScene.TitleLabel"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Clock" parent="MarginContainer/VBoxContainer/HBoxContainer/Control" instance=ExtResource("2_lgkt2")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.88, 0.88)
clock_time = SubResource("Resource_pfead")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.25
theme_override_constants/separation = 16

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="DigitalClockInput" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control" instance=ExtResource("3_wj7y3")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.0
offset_top = -97.0
offset_right = 82.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.4, 1.4)

[node name="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control/DigitalClockInput/HourInput" index="1"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_b2ub0")

[node name="HourLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control/DigitalClockInput/HourInput/PanelContainer" index="0"]
theme_override_font_sizes/font_size = 72

[node name="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control/DigitalClockInput" index="1"]
theme_override_font_sizes/font_size = 72

[node name="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control/DigitalClockInput/MinuteInput" index="1"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_5ek2t")

[node name="MinuteLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control/DigitalClockInput/MinuteInput/PanelContainer" index="0"]
theme_override_font_sizes/font_size = 72

[node name="ReadClockSceneButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource("2_64u0i")
text = "ClockPlaygroundScene.ReadClockSceneButton"
text_overrun_behavior = 1

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SyncTimeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_64u0i")
theme_type_variation = &"PurpleButton"
toggle_mode = true
text = "ClockPlaygroundScene.SyncTimeButton"
text_overrun_behavior = 1

[node name="BackButton" parent="." instance=ExtResource("33_akimw")]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 210.0
offset_bottom = 81.0

[connection signal="time_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Control/Clock" to="." method="_on_clock_time_changed"]
[connection signal="time_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control/DigitalClockInput" to="." method="_on_digital_clock_input_time_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ReadClockSceneButton" to="." method="_on_read_clock_scene_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SyncTimeButton" to="." method="_on_sync_time_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]

[editable path="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control/DigitalClockInput"]
